
AM_CPPFLAGS = @Xyce_INCS@

noinst_LTLIBRARIES = libErrorHandling.la

libErrorHandling_la_SOURCES = \
  $(srcdir)/src/N_ERH_ErrorMgr.C \
  $(srcdir)/src/N_ERH_Message.C \
  $(srcdir)/src/N_ERH_Messenger.C \
  $(srcdir)/src/N_ERH_Progress.C \
  $(srcdir)/include/mpi_filebuf.h \
  $(srcdir)/include/null_streambuf.h \
  $(srcdir)/include/N_ERH_ErrorMgr.h \
  $(srcdir)/include/N_ERH_Message.h \
  $(srcdir)/include/N_ERH_Messenger.h \
  $(srcdir)/include/N_ERH_Progress.h \
  $(srcdir)/include/N_ERH_fwd.h

