
AM_CPPFLAGS = @Xyce_INCS@

SUBDIRS = Output

noinst_LTLIBRARIES = libIOInterface.la

libIOInterface_la_SOURCES = \
  $(srcdir)/src/N_IO_CmdParse.C \
  $(srcdir)/src/N_IO_NetlistImportTool.C \
  $(srcdir)/src/N_IO_DistributionTool.C \
  $(srcdir)/src/N_IO_OutputMgr.C \
  $(srcdir)/src/N_IO_Outputter.C \
  $(srcdir)/src/N_IO_Objective.C \
  $(srcdir)/src/N_IO_RestartMgr.C \
  $(srcdir)/src/N_IO_SpiceSeparatedFieldTool.C \
  $(srcdir)/src/N_IO_CircuitMetadata.C \
  $(srcdir)/src/N_IO_CircuitBlock.C \
  $(srcdir)/src/N_IO_CircuitContext.C \
  $(srcdir)/src/N_IO_DeviceBlock.C \
  $(srcdir)/src/N_IO_OptionBlock.C \
  $(srcdir)/src/N_IO_ParameterBlock.C \
  $(srcdir)/src/N_IO_FunctionBlock.C \
  $(srcdir)/src/N_IO_RestartNode.C \
  $(srcdir)/src/N_IO_mmio.C \
  $(srcdir)/src/N_IO_PkgOptionsMgr.C \
  $(srcdir)/src/N_IO_FourierMgr.C \
  $(srcdir)/include/N_IO_fwd.h \
  $(srcdir)/include/N_IO_NetlistImportTool.h \
  $(srcdir)/include/N_IO_DistributionTool.h \
  $(srcdir)/include/N_IO_SpiceSeparatedFieldTool.h \
  $(srcdir)/include/N_IO_CircuitMetadata.h \
  $(srcdir)/include/N_IO_CircuitBlock.h \
  $(srcdir)/include/N_IO_CircuitContext.h \
  $(srcdir)/include/N_IO_DeviceBlock.h \
  $(srcdir)/include/N_IO_OptionBlock.h \
  $(srcdir)/include/N_IO_ParameterBlock.h \
  $(srcdir)/include/N_IO_FunctionBlock.h \
  $(srcdir)/include/N_IO_CmdParse.h \
  $(srcdir)/include/N_IO_mmio.h \
  $(srcdir)/include/N_IO_OutputMgr.h \
  $(srcdir)/include/N_IO_Outputter.h \
  $(srcdir)/include/N_IO_Objective.h \
  $(srcdir)/include/N_IO_RestartMgr.h \
  $(srcdir)/include/N_IO_RestartNode.h \
  $(srcdir)/include/N_IO_PkgOptionsMgr.h \
  $(srcdir)/include/N_IO_FourierMgr.h
