
AM_CPPFLAGS = @Xyce_INCS@

noinst_LTLIBRARIES = libLoaderServices.la

libLoaderServices_la_SOURCES = \
  $(srcdir)/src/N_LOA_NonlinearEquationLoader.C \
  $(srcdir)/src/N_LOA_CktLoader.C \
  $(srcdir)/src/N_LOA_HBLoader.C \
  $(srcdir)/src/N_LOA_Loader.C \
  $(srcdir)/src/N_LOA_LoaderMgr.C \
  $(srcdir)/include/N_LOA_NonlinearEquationLoader.h \
  $(srcdir)/include/N_LOA_CktLoader.h \
  $(srcdir)/include/N_LOA_HBLoader.h \
  $(srcdir)/include/N_LOA_Loader.h \
  $(srcdir)/include/N_LOA_LoaderMgr.h

