
AM_CPPFLAGS = @Xyce_INCS@

noinst_LTLIBRARIES = libMPDE.la

libMPDE_la_SOURCES = \
  $(srcdir)/src/N_MPDE_Manager.C \
  $(srcdir)/src/N_MPDE_Builder.C \
  $(srcdir)/src/N_MPDE_DeviceInterface.C \
  $(srcdir)/src/N_MPDE_Loader.C \
  $(srcdir)/src/N_MPDE_SawtoothLoader.C \
  $(srcdir)/src/N_MPDE_Discretization.C \
  $(srcdir)/src/N_MPDE_WarpedPhaseCondition.C \
  $(srcdir)/include/N_MPDE_Manager.h \
  $(srcdir)/include/N_MPDE_Builder.h \
  $(srcdir)/include/N_MPDE_DeviceInterface.h \
  $(srcdir)/include/N_MPDE_Loader.h \
  $(srcdir)/include/N_MPDE_SawtoothLoader.h \
  $(srcdir)/include/N_MPDE_Discretization.h \
  $(srcdir)/include/N_MPDE_WarpedPhaseCondition.h \
  $(srcdir)/include/N_MPDE_State.h 
 
