
AM_CPPFLAGS = @Xyce_INCS@

noinst_LTLIBRARIES = libNonlinearSolver.la

libNonlinearSolver_la_SOURCES = \
  $(srcdir)/src/N_NLS_Manager.C \
  $(srcdir)/src/N_NLS_NonLinearSolver.C \
  $(srcdir)/src/N_NLS_DampedNewton.C \
  $(srcdir)/src/N_NLS_TwoLevelNewton.C \
  $(srcdir)/src/N_NLS_Sensitivity.C \
  $(srcdir)/src/N_NLS_ConductanceExtractor.C \
  $(srcdir)/src/N_NLS_ConstraintBT.C \
  $(srcdir)/src/N_NLS_MatrixFreeEpetraOperator.C \
  $(srcdir)/src/N_NLS_NLParams.C \
  $(srcdir)/src/N_NLS_ParamMgr.C \
  $(srcdir)/src/N_NLS_NOX.C \
  $(srcdir)/src/N_NLS_NOX_Vector.C \
  $(srcdir)/src/N_NLS_NOX_Group.C \
  $(srcdir)/src/N_NLS_NOX_Interface.C \
  $(srcdir)/src/N_NLS_NOX_SharedSystem.C \
  $(srcdir)/src/N_NLS_NOX_ParameterSet.C \
  $(srcdir)/src/N_NLS_NOX_XyceTests.C \
  $(srcdir)/src/N_NLS_NOX_FastTests.C \
  $(srcdir)/src/N_NLS_NOX_PseudoTransientTest.C \
  $(srcdir)/src/N_NLS_NOX_PseudoTransientSolver.C \
  $(srcdir)/src/N_NLS_NOX_WeightedUpdateTest.C \
  $(srcdir)/src/N_NLS_NOX_UpdateTooSmallTest.C \
  $(srcdir)/src/N_NLS_NOX_NearConvergenceTest.C \
  $(srcdir)/src/N_NLS_NOX_StagnationTest.C \
  $(srcdir)/src/N_NLS_NOX_LargeUpdateTest.C \
  $(srcdir)/src/N_NLS_LOCA_Group.C \
  $(srcdir)/src/N_NLS_NOX_AugmentLinSys_PseudoTransient.C \
  $(srcdir)/src/N_NLS_NOX_AugmentLinSys_GStepping.C \
  $(srcdir)/src/N_NLS_NOX_AugmentLinSys_OPStart.C \
  $(srcdir)/src/N_NLS_NOX_AugmentLinSys_IC.C \
  $(srcdir)/src/N_NLS_NOX_AugmentLinSys_IC_Gmin.C \
  $(srcdir)/src/N_NLS_ReturnCodes.C \
  $(srcdir)/include/N_NLS_ConstraintBT.h \
  $(srcdir)/include/N_NLS_DampedNewton.h \
  $(srcdir)/include/N_NLS_TwoLevelNewton.h \
  $(srcdir)/include/N_NLS_TwoLevelEnum.h \
  $(srcdir)/include/N_NLS_Sensitivity.h \
  $(srcdir)/include/N_NLS_ConductanceExtractor.h \
  $(srcdir)/include/N_NLS_Manager.h \
  $(srcdir)/include/N_NLS_MatrixFreeEpetraOperator.h \
  $(srcdir)/include/N_NLS_NLParams.h \
  $(srcdir)/include/N_NLS_ParamMgr.h \
  $(srcdir)/include/N_NLS_ReturnCodes.h \
  $(srcdir)/include/N_NLS_NonLinearSolver.h \
  $(srcdir)/include/N_NLS_NonLinInfo.h \
  $(srcdir)/include/N_NLS_NOX.h \
  $(srcdir)/include/N_NLS_NOX_Vector.h \
  $(srcdir)/include/N_NLS_NOX_Group.h \
  $(srcdir)/include/N_NLS_NOX_Interface.h \
  $(srcdir)/include/N_NLS_NOX_SharedSystem.h \
  $(srcdir)/include/N_NLS_NOX_ParameterSet.h \
  $(srcdir)/include/N_NLS_NOX_XyceTests.h \
  $(srcdir)/include/N_NLS_NOX_FastTests.h \
  $(srcdir)/include/N_NLS_NOX_PseudoTransientTest.h \
  $(srcdir)/include/N_NLS_NOX_PseudoTransientSolver.h \
  $(srcdir)/include/N_NLS_NOX_WeightedUpdateTest.h \
  $(srcdir)/include/N_NLS_NOX_UpdateTooSmallTest.h \
  $(srcdir)/include/N_NLS_NOX_NearConvergenceTest.h \
  $(srcdir)/include/N_NLS_NOX_StagnationTest.h \
  $(srcdir)/include/N_NLS_NOX_LargeUpdateTest.h \
  $(srcdir)/include/N_NLS_LOCA_Group.h \
  $(srcdir)/include/N_NLS_NOX_AugmentLinSys.h \
  $(srcdir)/include/N_NLS_NOX_AugmentLinSys_PseudoTransient.h \
  $(srcdir)/include/N_NLS_NOX_AugmentLinSys_GStepping.h \
  $(srcdir)/include/N_NLS_NOX_AugmentLinSys_OPStart.h \
  $(srcdir)/include/N_NLS_NOX_AugmentLinSys_IC.h \
  $(srcdir)/include/N_NLS_NOX_AugmentLinSys_IC_Gmin.h 
