
AM_CPPFLAGS = @Xyce_INCS@

noinst_LTLIBRARIES = libParallelDist.la

libParallelDist_la_SOURCES = \
  $(srcdir)/src/N_PDS_Manager.C \
  $(srcdir)/src/N_PDS_ParallelMachine.C \
  $(srcdir)/src/N_PDS_MPI.C \
  $(srcdir)/src/N_PDS_ParMap.C \
  $(srcdir)/src/N_PDS_ParMapFactory.C \
  $(srcdir)/src/N_PDS_GlobalAccessor.C \
  $(srcdir)/src/N_PDS_Migrator.C \
  $(srcdir)/src/N_PDS_ParDir.C \
  $(srcdir)/src/N_PDS_MPIComm.C \
  $(srcdir)/src/N_PDS_ParComm.C \
  $(srcdir)/src/N_PDS_SerialComm.C \
  $(srcdir)/src/N_PDS_SerialParComm.C \
  $(srcdir)/src/N_PDS_CommFactory.C \
  $(srcdir)/include/GSComm_Comm.h \
  $(srcdir)/include/GSComm_Plan.h \
  $(srcdir)/include/N_PDS_fwd.h \
  $(srcdir)/include/N_PDS_ParallelMachine.h \
  $(srcdir)/include/N_PDS_MPI.h \
  $(srcdir)/include/N_PDS_Comm.h \
  $(srcdir)/include/N_PDS_CommFactory.h \
  $(srcdir)/include/N_PDS_Directory.h \
  $(srcdir)/include/N_PDS_GlobalAccessor.h \
  $(srcdir)/include/N_PDS_MPIComm.h \
  $(srcdir)/include/N_PDS_Manager.h \
  $(srcdir)/include/N_PDS_Migrate.h \
  $(srcdir)/include/N_PDS_Migrator.h \
  $(srcdir)/include/N_PDS_ParComm.h \
  $(srcdir)/include/N_PDS_ParDir.h \
  $(srcdir)/include/N_PDS_ParMap.h \
  $(srcdir)/include/N_PDS_ParMapFactory.h \
  $(srcdir)/include/N_PDS_SerialComm.h \
  $(srcdir)/include/N_PDS_SerialParComm.h \
  $(srcdir)/include/N_PDS_PackTraits.h \
  $(srcdir)/include/N_PDS_Node.h
 
