
AM_CPPFLAGS = @Xyce_INCS@

noinst_LTLIBRARIES = libTimeIntegration.la

libTimeIntegration_la_SOURCES = \
  $(srcdir)/src/N_TIA_Assembler.C \
  $(srcdir)/src/N_TIA_DataStore.C \
  $(srcdir)/src/N_TIA_TIAParams.C \
  $(srcdir)/src/N_TIA_StepErrorControl.C \
  $(srcdir)/src/N_TIA_MPDEInterface.C \
  $(srcdir)/src/N_TIA_TimeIntegrationMethods.C \
  $(srcdir)/src/N_TIA_BackwardDifferentiation15.C \
  $(srcdir)/src/N_TIA_Gear12.C \
  $(srcdir)/src/N_TIA_OneStep.C \
  $(srcdir)/src/N_TIA_NoTimeIntegration.C \
  $(srcdir)/src/N_TIA_TwoLevelError.C \
  $(srcdir)/src/N_TIA_TimeIntInfo.C \
  $(srcdir)/include/N_TIA_Assembler.h \
  $(srcdir)/include/N_TIA_BackwardDifferentiation15.h \
  $(srcdir)/include/N_TIA_Gear12.h \
  $(srcdir)/include/N_TIA_OneStep.h \
  $(srcdir)/include/N_TIA_DataStore.h \
  $(srcdir)/include/N_TIA_Dummy.h \
  $(srcdir)/include/N_TIA_MPDEInterface.h \
  $(srcdir)/include/N_TIA_NoTimeIntegration.h \
  $(srcdir)/include/N_TIA_StepErrorControl.h \
  $(srcdir)/include/N_TIA_TIAParams.h \
  $(srcdir)/include/N_TIA_TimeIntegrationMethods.h \
  $(srcdir)/include/N_TIA_TimeIntegrationEnum.h \
  $(srcdir)/include/N_TIA_TimeIntInfo.h \
  $(srcdir)/include/N_TIA_TwoLevelError.h
