
AM_CPPFLAGS = @Xyce_INCS@

noinst_LTLIBRARIES = libTopoManager.la

libTopoManager_la_SOURCES= \
  $(srcdir)/src/N_TOP_CktGraph.C \
  $(srcdir)/src/N_TOP_CktGraphCreatorBasic.C \
  $(srcdir)/src/N_TOP_CktGraphBasic.C \
  $(srcdir)/src/N_TOP_CktGraphSupport.C \
  $(srcdir)/src/N_TOP_CktNode.C \
  $(srcdir)/src/N_TOP_CktNodeCreator.C \
  $(srcdir)/src/N_TOP_CktNode_Ckt.C \
  $(srcdir)/src/N_TOP_CktNode_Dev.C \
  $(srcdir)/src/N_TOP_CktNode_V.C \
  $(srcdir)/src/N_TOP_Directory.C \
  $(srcdir)/src/N_TOP_Node.C \
  $(srcdir)/src/N_TOP_NodeBlock.C \
  $(srcdir)/src/N_TOP_NodeDevBlock.C \
  $(srcdir)/src/N_TOP_ParNode.C \
  $(srcdir)/src/N_TOP_TopoLSUtil.C \
  $(srcdir)/src/N_TOP_Topology.C \
  $(srcdir)/src/N_TOP_Indexor.C \
  $(srcdir)/src/N_TOP_TopologyMgr.C \
  $(srcdir)/src/N_TOP_DevInsertionTool.C \
  $(srcdir)/include/N_TOP_fwd.h \
  $(srcdir)/include/N_TOP_CktGraph.h \
  $(srcdir)/include/N_TOP_CktGraphCreator.h \
  $(srcdir)/include/N_TOP_CktGraphCreatorBasic.h \
  $(srcdir)/include/N_TOP_CktGraphBasic.h \
  $(srcdir)/include/N_TOP_CktGraphSupport.h \
  $(srcdir)/include/N_TOP_CktNode.h \
  $(srcdir)/include/N_TOP_CktNodeCreator.h \
  $(srcdir)/include/N_TOP_CktNode_Ckt.h \
  $(srcdir)/include/N_TOP_CktNode_Dev.h \
  $(srcdir)/include/N_TOP_CktNode_V.h \
  $(srcdir)/include/N_TOP_Directory.h \
  $(srcdir)/include/N_TOP_Misc.h \
  $(srcdir)/include/N_TOP_Node.h \
  $(srcdir)/include/N_TOP_NodeBlock.h \
  $(srcdir)/include/N_TOP_NodeDevBlock.h \
  $(srcdir)/include/N_TOP_ParNode.h \
  $(srcdir)/include/N_TOP_TopoLSUtil.h \
  $(srcdir)/include/N_TOP_Topology.h \
  $(srcdir)/include/N_TOP_Indexor.h \
  $(srcdir)/include/N_TOP_TopologyMgr.h \
  $(srcdir)/include/N_TOP_InsertionTool.h \
  $(srcdir)/include/N_TOP_DevInsertionTool.h

