
AM_CPPFLAGS = @Xyce_INCS@

AM_CXXFLAGS = @ADMS_CXXFLAGS@

noinst_LTLIBRARIES = libADMS.la

libADMS_la_SOURCES = \
  $(srcdir)/src/N_DEV_ADMSvbic.C \
  $(srcdir)/include/N_DEV_ADMSvbic.h \
  $(srcdir)/src/N_DEV_ADMSHBT_X.C \
  $(srcdir)/include/N_DEV_ADMSHBT_X.h \
  $(srcdir)/src/N_DEV_ADMSPSP103VA.C \
  $(srcdir)/include/N_DEV_ADMSPSP103VA.h 


