
AM_CPPFLAGS = @Xyce_INCS@

AM_CXXFLAGS = @ADMS_CXXFLAGS@

noinst_LTLIBRARIES = libADMS.la

libADMS_la_SOURCES = \
  $(srcdir)/src/N_DEV_RegisterADMSDevices.C \
  $(srcdir)/src/N_DEV_ADMSHBT_X.C \
  $(srcdir)/src/N_DEV_ADMSPSP103VA.C \
  $(srcdir)/src/N_DEV_ADMSbsimcmg.C \
  $(srcdir)/src/N_DEV_ADMSvbic.C \
  $(srcdir)/include/N_DEV_RegisterADMSDevices.h \
  $(srcdir)/include/N_DEV_ADMSHBT_X.h \
  $(srcdir)/include/N_DEV_ADMSPSP103VA.h \
  $(srcdir)/include/N_DEV_ADMSbsimcmg.h \
  $(srcdir)/include/N_DEV_ADMSvbic.h


