
AM_CPPFLAGS = @Xyce_INCS@

noinst_LTLIBRARIES = libEXT.la

libEXT_la_SOURCES = \
  $(srcdir)/src/N_DEV_ExternDevice.C \
  $(srcdir)/src/N_DEV_ExternCodeInterface.C \
  $(srcdir)/src/N_DEV_XyceInterface.C \
  $(srcdir)/src/N_DEV_CharonInterface.C \
  $(srcdir)/src/N_DEV_1D_Interface.C \
  $(srcdir)/include/N_DEV_ExternDevice.h \
  $(srcdir)/include/N_DEV_ExternDevice_Factory.h \
  $(srcdir)/include/N_DEV_ExternCodeInterface.h \
  $(srcdir)/include/N_DEV_XyceInterface.h \
  $(srcdir)/include/N_DEV_CharonInterface.h \
  $(srcdir)/include/N_DEV_1D_Interface.h 

