
AM_CPPFLAGS = @Xyce_INCS@

noinst_LTLIBRARIES = libNeuronModels.la

libNeuronModels_la_SOURCES = \
  $(srcdir)/src/N_DEV_RegisterNeuronDevices.C \
  $(srcdir)/src/N_DEV_Neuron.C \
  $(srcdir)/src/N_DEV_Neuron2.C \
  $(srcdir)/src/N_DEV_Neuron3.C \
  $(srcdir)/src/N_DEV_Neuron4.C \
  $(srcdir)/src/N_DEV_Neuron5.C \
  $(srcdir)/src/N_DEV_Neuron6.C \
  $(srcdir)/src/N_DEV_Neuron7.C \
  $(srcdir)/src/N_DEV_Neuron8.C \
  $(srcdir)/src/N_DEV_Neuron9.C \
  $(srcdir)/src/N_DEV_NeuronPop1.C \
  $(srcdir)/src/N_DEV_Synapse.C \
  $(srcdir)/src/N_DEV_MembraneModel.C \
  $(srcdir)/src/N_DEV_Synapse2.C \
  $(srcdir)/src/N_DEV_Synapse3.C \
  $(srcdir)/src/N_DEV_Synapse4.C \
  $(srcdir)/src/N_DEV_MembranePassive.C \
  $(srcdir)/src/N_DEV_MembraneUserDefined.C \
  $(srcdir)/src/N_DEV_MembraneHH.C \
  $(srcdir)/src/N_DEV_MembraneCS.C \
  $(srcdir)/include/N_DEV_RegisterNeuronDevices.h \
  $(srcdir)/include/N_DEV_Neuron.h \
  $(srcdir)/include/N_DEV_Neuron_Factory.h \
  $(srcdir)/include/N_DEV_Neuron2.h \
  $(srcdir)/include/N_DEV_Neuron2_Factory.h \
  $(srcdir)/include/N_DEV_Neuron3.h \
  $(srcdir)/include/N_DEV_Neuron3_Factory.h \
  $(srcdir)/include/N_DEV_Neuron4.h \
  $(srcdir)/include/N_DEV_Neuron4_Factory.h \
  $(srcdir)/include/N_DEV_Neuron5.h \
  $(srcdir)/include/N_DEV_Neuron5_Factory.h \
  $(srcdir)/include/N_DEV_Neuron6.h \
  $(srcdir)/include/N_DEV_Neuron6_Factory.h \
  $(srcdir)/include/N_DEV_Neuron7.h \
  $(srcdir)/include/N_DEV_Neuron7_Factory.h \
  $(srcdir)/include/N_DEV_Neuron8.h \
  $(srcdir)/include/N_DEV_Neuron8_Factory.h \
  $(srcdir)/include/N_DEV_Neuron9.h \
  $(srcdir)/include/N_DEV_Neuron9_Factory.h \
  $(srcdir)/include/N_DEV_NeuronPop1.h \
  $(srcdir)/include/N_DEV_NeuronPop1_Factory.h \
  $(srcdir)/include/N_DEV_Neuron_CommonEquations.h \
  $(srcdir)/include/N_DEV_Synapse.h \
  $(srcdir)/include/N_DEV_Synapse_Factory.h  \
  $(srcdir)/include/N_DEV_Synapse2.h \
  $(srcdir)/include/N_DEV_Synapse2_Factory.h  \
  $(srcdir)/include/N_DEV_Synapse3.h \
  $(srcdir)/include/N_DEV_Synapse3_Factory.h  \
  $(srcdir)/include/N_DEV_Synapse4.h \
  $(srcdir)/include/N_DEV_Synapse4_Factory.h  \
  $(srcdir)/include/N_DEV_MembraneModel.h  \
  $(srcdir)/include/N_DEV_MembranePassive.h \
  $(srcdir)/include/N_DEV_MembraneUserDefined.h \
  $(srcdir)/include/N_DEV_MembraneHH.h \
  $(srcdir)/include/N_DEV_MembraneCS.h
  
