AM_CPPFLAGS = @Xyce_INCS@

noinst_LTLIBRARIES = libOpenModels.la

libOpenModels_la_SOURCES = \
  $(srcdir)/src/N_DEV_ACC.C \
  $(srcdir)/src/N_DEV_BJT.C \
  $(srcdir)/src/N_DEV_DAC.C \
  $(srcdir)/src/N_DEV_ADC.C \
  $(srcdir)/src/N_DEV_Bsrc.C \
  $(srcdir)/src/N_DEV_Diode.C  \
  $(srcdir)/src/N_DEV_ISRC.C \
  $(srcdir)/src/N_DEV_Inductor.C \
  $(srcdir)/src/N_DEV_JFET.C \
  $(srcdir)/src/N_DEV_LTRA.C \
  $(srcdir)/src/N_DEV_LTRA_Faddeeva.C \
  $(srcdir)/src/N_DEV_MESFET.C  \
  $(srcdir)/src/N_DEV_MOSFET1.C \
  $(srcdir)/src/N_DEV_MOSFET2.C \
  $(srcdir)/src/N_DEV_MOSFET3.C \
  $(srcdir)/src/N_DEV_MOSFET6.C \
  $(srcdir)/src/N_DEV_MOSFET_B3.C \
  $(srcdir)/src/N_DEV_MOSFET_B4.C \
  $(srcdir)/src/N_DEV_MOSFET_B3SOI.C \
  $(srcdir)/src/N_DEV_MutIndLin.C \
  $(srcdir)/src/N_DEV_MutIndNonLin.C \
  $(srcdir)/src/N_DEV_MutIndNonLin2.C \
  $(srcdir)/src/N_DEV_Xygra.C \
  $(srcdir)/src/N_DEV_OpAmp.C \
  $(srcdir)/src/N_DEV_Digital.C \
  $(srcdir)/src/N_DEV_VDMOS.C \
  $(srcdir)/src/N_DEV_Capacitor.C \
  $(srcdir)/src/N_DEV_Resistor.C \
  $(srcdir)/src/N_DEV_Resistor3.C \
  $(srcdir)/src/N_DEV_ThermalResistor.C \
  $(srcdir)/src/N_DEV_SW.C \
  $(srcdir)/src/N_DEV_TRA.C \
  $(srcdir)/src/N_DEV_VCCS.C \
  $(srcdir)/src/N_DEV_Vcvs.C \
  $(srcdir)/src/N_DEV_Vsrc.C \
  $(srcdir)/src/N_DEV_ROM.C \
  $(srcdir)/src/N_DEV_RegisterOpenDevices.C \
  $(srcdir)/src/N_DEV_TransLine.C \
  $(srcdir)/include/N_DEV_ACC.h \
  $(srcdir)/include/N_DEV_BJT.h \
  $(srcdir)/include/N_DEV_Bsrc.h \
  $(srcdir)/include/N_DEV_DAC.h \
  $(srcdir)/include/N_DEV_ADC.h \
  $(srcdir)/include/N_DEV_Diode.h \
  $(srcdir)/include/N_DEV_ISRC.h \
  $(srcdir)/include/N_DEV_Inductor.h \
  $(srcdir)/include/N_DEV_JFET.h \
  $(srcdir)/include/N_DEV_LTRA.h \
  $(srcdir)/include/N_DEV_LTRA_Faddeeva.h \
  $(srcdir)/include/N_DEV_MESFET.h \
  $(srcdir)/include/N_DEV_MOSFET1.h \
  $(srcdir)/include/N_DEV_MOSFET2.h \
  $(srcdir)/include/N_DEV_MOSFET3.h \
  $(srcdir)/include/N_DEV_MOSFET6.h \
  $(srcdir)/include/N_DEV_MOSFET_B3.h \
  $(srcdir)/include/N_DEV_MOSFET_B4.h \
  $(srcdir)/include/N_DEV_MOSFET_B3SOI.h \
  $(srcdir)/include/N_DEV_MutIndLin.h \
  $(srcdir)/include/N_DEV_MutIndNonLin.h \
  $(srcdir)/include/N_DEV_MutIndNonLin2.h \
  $(srcdir)/include/N_DEV_Xygra.h \
  $(srcdir)/include/N_DEV_OpAmp.h \
  $(srcdir)/include/N_DEV_Digital.h \
  $(srcdir)/include/N_DEV_VDMOS.h \
  $(srcdir)/include/N_DEV_Capacitor.h \
  $(srcdir)/include/N_DEV_Resistor.h \
  $(srcdir)/include/N_DEV_Resistor3.h \
  $(srcdir)/include/N_DEV_ThermalResistor.h \
  $(srcdir)/include/N_DEV_SW.h \
  $(srcdir)/include/N_DEV_TRA.h \
  $(srcdir)/include/N_DEV_VCCS.h \
  $(srcdir)/include/N_DEV_Vcvs.h \
  $(srcdir)/include/N_DEV_Vsrc.h \
  $(srcdir)/include/N_DEV_ROM.h \
  $(srcdir)/include/N_DEV_RegisterOpenDevices.h
