
AM_CPPFLAGS = @Xyce_INCS@

noinst_LTLIBRARIES = libTCADModels.la

libTCADModels_la_SOURCES = \
  $(srcdir)/src/N_DEV_PDEMeshContainer.C \
  $(srcdir)/src/N_DEV_PDE_2DMesh.C \
  $(srcdir)/src/N_DEV_PDE_Electrode.C \
  $(srcdir)/src/N_DEV_DiodePDE_DAE.C \
  $(srcdir)/src/N_DEV_DiodePDEModel.C \
  $(srcdir)/src/N_DEV_DiodePDEInstance.C \
  $(srcdir)/src/N_DEV_2DPDE_Output.C \
  $(srcdir)/src/N_DEV_2DPDE_DAE.C \
  $(srcdir)/src/N_DEV_2DPDEModel.C   \
  $(srcdir)/src/N_DEV_2DPDEInstance.C   \
  $(srcdir)/src/N_DEV_2DPDEParam.C   \
  $(srcdir)/src/N_DEV_2DPDESetup.C   \
  $(srcdir)/src/N_DEV_DevicePDEInstance.C \
  $(srcdir)/src/N_DEV_DopeInfo.C \
  $(srcdir)/src/N_DEV_MaterialSupport.C \
  $(srcdir)/src/N_DEV_BernouliSupport.C \
  $(srcdir)/include/N_DEV_bcData.h \
  $(srcdir)/include/N_DEV_2DPDE.h \
  $(srcdir)/include/N_DEV_DeviceInterfaceNode.h \
  $(srcdir)/include/N_DEV_SGF_Interface.h \
  $(srcdir)/include/N_DEV_PDEMeshContainer.h \
  $(srcdir)/include/N_DEV_PDE_2DMesh.h \
  $(srcdir)/include/N_DEV_PDE_Electrode.h \
  $(srcdir)/include/N_DEV_DopeInfo.h \
  $(srcdir)/include/N_DEV_ScalingVars.h \
  $(srcdir)/include/N_DEV_MaterialSupport.h \
  $(srcdir)/include/N_DEV_BernouliSupport.h \
  $(srcdir)/include/N_DEV_DevicePDEModel.h \
  $(srcdir)/include/N_DEV_DiodePDE.h  \
  $(srcdir)/include/N_DEV_2DPDE_Factory.h \
  $(srcdir)/include/N_DEV_DevicePDEInstance.h

