
AM_CPPFLAGS = @Xyce_INCS@

noinst_LTLIBRARIES = libOutput.la

libOutput_la_SOURCES = \
  $(srcdir)/src/N_IO_OutputFileBase.C \
  $(srcdir)/include/N_IO_OutputFileBase.h \
  $(srcdir)/src/N_IO_OutputPrn.C \
  $(srcdir)/include/N_IO_OutputPrn.h \
  $(srcdir)/src/N_IO_OutputHDF5.C \
  $(srcdir)/include/N_IO_OutputHDF5.h \
  $(srcdir)/include/N_IO_Measure_fwd.h  \
  $(srcdir)/src/N_IO_MeasureManager.C  \
  $(srcdir)/include/N_IO_MeasureManager.h  \
  $(srcdir)/src/N_IO_MeasureBase.C \
  $(srcdir)/include/N_IO_MeasureBase.h \
  $(srcdir)/src/N_IO_MeasureRiseFallDelay.C \
  $(srcdir)/include/N_IO_MeasureRiseFallDelay.h \
  $(srcdir)/src/N_IO_MeasureAverage.C \
  $(srcdir)/include/N_IO_MeasureAverage.h \
  $(srcdir)/src/N_IO_MeasureDuty.C \
  ${srcdir}/include/N_IO_MeasureDuty.h \
  $(srcdir)/src/N_IO_MeasureFrequency.C \
  ${srcdir}/include/N_IO_MeasureFrequency.h \
  $(srcdir)/src/N_IO_MeasureMax.C \
  ${srcdir}/include/N_IO_MeasureMax.h \
  $(srcdir)/src/N_IO_MeasureMin.C \
  ${srcdir}/include/N_IO_MeasureMin.h \
  $(srcdir)/src/N_IO_MeasureOffTime.C \
  ${srcdir}/include/N_IO_MeasureOffTime.h \
  $(srcdir)/src/N_IO_MeasureOnTime.C \
  ${srcdir}/include/N_IO_MeasureOnTime.h \
  $(srcdir)/src/N_IO_MeasurePeakToPeak.C \
  ${srcdir}/include/N_IO_MeasurePeakToPeak.h \
  $(srcdir)/src/N_IO_MeasureRMS.C \
  ${srcdir}/include/N_IO_MeasureRMS.h \
  ${srcdir}/src/N_IO_MeasureFindWhen.C \
  ${srcdir}/include/N_IO_MeasureFindWhen.h \
  ${srcdir}/src/N_IO_MeasureEquationEvaluation.C \
  ${srcdir}/include/N_IO_MeasureEquationEvaluation.h \
  ${srcdir}/src/N_IO_MeasureDerivativeEvaluation.C \
  ${srcdir}/include/N_IO_MeasureDerivativeEvaluation.h \
  ${srcdir}/src/N_IO_MeasureIntegralEvaluation.C \
  ${srcdir}/include/N_IO_MeasureIntegralEvaluation.h \
  ${srcdir}/src/N_IO_MeasureRelativeError.C \
  ${srcdir}/include/N_IO_MeasureRelativeError.h \
  ${srcdir}/src/N_IO_MeasureFourier.C \
  ${srcdir}/include/N_IO_MeasureFourier.h
